# emoji-strings

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  demo.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py.old  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
emoji_strings/: __init__.py
tests/: test_emoji.py  test_other.py
