[build-system]
requires = [ "whey", "whey-pth",]
build-backend = "whey"

[project]
name = "emoji-strings"
version = "0.1.0"
description = "Adds support for emoji-strings in Python, which convert emoji names into actual emoji."
readme = "README.rst"
keywords = [ "emoji", "fstring",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/emoji-strings"
"Issue Tracker" = "https://github.com/domdfcoding/emoji-strings/issues"
"Source Code" = "https://github.com/domdfcoding/emoji-strings"

[tool.whey]
base-classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers",]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "emoji_strings"

[tool.whey-pth]
name = "aaaaa_emoji_strings"
pth-content = "import sys, emoji_strings; del sys.modules['emoji_strings']\n"

[tool.whey.builders]
wheel = "whey_pth_wheel"
