[build-system]
requires = [ "whey", "whey-pth",]
build-backend = "whey"

[project]
name = "emoji-strings"
version = "0.1.0"
description = "Adds support for emoji-strings in Python, which convert emoji names into actual emoji."
readme = "README.rst"
keywords = [ "emoji", "fstring",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/emoji-strings"
"Issue Tracker" = "https://github.com/domdfcoding/emoji-strings/issues"
"Source Code" = "https://github.com/domdfcoding/emoji-strings"

[tool.whey]
base-classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers",]
python-versions = [ "3.7", "3.8", "3.9", "3.10", "3.11",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "emoji_strings"

[tool.whey.builders]
wheel = "whey_pth_wheel"

[tool.whey-pth]
name = "aaaaa_emoji_strings"
pth-content = "import sys, emoji_strings; del sys.modules['emoji_strings']\n"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false
